# myNewRPG

./: CMakeLists.txt  CMakePresets.json  Character.cpp  Character.h  Cleric.cpp  Cleric.h  CombatEngine.cpp  CombatEngine.h  CombatState.h  EventBus.cpp  GameEvent.h  GameStateManager.h  Goblin.h  IronHammer.cpp  IronHammer.h  Item.h  ItemFactory.cpp  ItemFactory.h  MainMenuState.h  Merchant.h  Monster.cpp  Monster.h  Orc.cpp  Orc.h  Potion.cpp  PricingStrategy.h  Rogue.cpp  Rogue.h  Slime.cpp  Slime.h  StatBlock.cpp  StatBlock.h  StatusEffect.h  TradeResult.h  TrainingAreaState.cpp  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h  includes.txt  (+1 more)
src/: EventBus.cpp  EventBus.h  Merchant.cpp  MonsterFactory.cpp  MonsterFactory.h  main.cpp
src/character/: Character.cpp  Character.h  Cleric.cpp  Cleric.h  Rogue.cpp  Rogue.h  StatBlock.h  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h
src/combatEngine/: CombatEngine.cpp  CombatEngine.h  StatusEffect.h
src/economy/: Merchant.h
src/events/: EventBus.cpp  EventBus.h  GameContext.h
src/item/: IronHammer.cpp  Item.cpp  ItemFactory.cpp  ItemFactory.h  Potion.cpp  Potion.h  SlimeBubble.cpp  SlimeBubble.h
src/monsters/: Goblin.cpp  Goblin.h  Monster.h  MonsterFactory.cpp  MonsterFactory.h  Orc.cpp  Orc.h  Slime.cpp  Slime.h
src/states/: CombatState.cpp  GameOverState.cpp  GameOverState.h  GameStateManager.cpp  GameStateManager.h  IGameState.h  MainMenuState.cpp  ShopState.cpp  ShopState.h  TrainingAreaState.h
src/strategies/: DamageStrategy.h  PricingStrategy.h
